kubernetes/kube_aria/02/05 - service-nginx-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.aria.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: nginx-service
                  port: 
                    number: 80
